RESOLVED FIXED311255
[css-values-5 attr()] Fix error handling in syntax parsing
https://bugs.webkit.org/show_bug.cgi?id=311255
Summary [css-values-5 attr()] Fix error handling in syntax parsing
Antti Koivisto
Reported 2026-04-01 04:08:41 PDT
LayoutTests/imported/w3c/web-platform-tests/css/css-values/attr-all-types-expected.txt:FAIL CSS Values and Units Test: attr 59 assert_equals: Setting property 'width' to the value 'attr(data-foo type(invalid |), 10px)', where 'data-foo=0px' should not change it's value. expected "784px" but got "10px"
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-01 04:08:54 PDT
Antti Koivisto
Comment 2 2026-04-01 04:12:41 PDT
EWS
Comment 3 2026-04-01 10:13:49 PDT
Committed 310373@main (45bbe25bf07b): <https://commits.webkit.org/310373@main> Reviewed commits have been landed. Closing PR #61821 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.