[css-values-5 attr()] Fix error handling in syntax parsing https://bugs.webkit.org/show_bug.cgi?id=311255 rdar://173849148

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-values/attr-all-types-expected.txt:
* Source/WebCore/css/parser/CSSCustomPropertySyntax.cpp:
(WebCore::CSSCustomPropertySyntax::parse):

type(invalid |) should not parse.

Canonical link: https://commits.webkit.org/310373@main